Revision history for DBIx-Class-Fixtures

{{$NEXT}}

- use Test::TempDir::Tiny for better test parallelization and cleanup


1.001_029 2015-01-14 15:17:28+00:00 Europe/London

- fix for bugtracker pointing to gh, should be rt, added test to identify windows issues

1.001028  2015-01-05 00:40:41+00:00 Europe/London

- releasing as stable

1.001027_02 2014-12-30 19:50:50+00:00 Europe/London

- changed tests to use portable directory management

1.001027_01 2014-12-26 17:06:08+00:00 Europe/London

- Fix fixture filenames to be compatible with ntfs systems - mrf++

1.001026  2014-12-01 16:43:10+00:00 Europe/London

- bugfix: not relying on $src->from to be a string anymore, use $src->name or $src->source_name. mrf++

1.001025  2014-11-30 00:58:13+00:00 Europe/London

- optimization: add empty string as second arg to encode_base64 - rammo++
    https://github.com/dbsrgits/DBIx-Class-Fixtures/pull/1/commits

1.001024  2014-08-15 13:55:57+01:00 Europe/London

-  Missing test dependency added

1.001023  2014-08-13 22:20:17+01:00 Europe/London
- No change from last version

1.001021_01
- add in option use_find_or_create

1.001021
- Applied patch to solve issue when trying to copy fixtures across volumes

1.001020
- Bumped some dependencies to stop cpan tester fails.

1.001019
- Fixed issue when using fixtures and parallel testing (such as prove -j9 ...)

1.001018
- Reduced the size of a PK in the fixtures to stop (hopefully) some occasional
  error reports

1.001017
- POD fixes (justin hunter++)
- Changed the test suite so it doesn't mindlessly break with the changes
  introduced by DBIC 0.08200 (nerox++ for bug report).

1.001016
- Support more Postgresql types for datetime_relative (added TIME, DATE,
  INTERVAL, TIMESTAMP)
- If $result_source->column_info defines a sequence, make sure we properly
  set that sequence to whatever the max value currently is.

1.001015
- ::External::File makes the path if its missing

1.001014