@@ -15,12 +15,12 @@ repository.url    = https://github.com/dbsrgits/DBIx-Class-Fixtures.git
 repository.web    = https://github.com/dbsrgits/DBIx-Class-Fixtures
 repository.type   = git
 
+[VersionFromModule]
 [PkgVersion]
 [NextRelease]
 
 [Git::Tag]
 [Git::Contributors]
-[VersionFromModule]
 
 [Git::Push]
 
